projects/vb6parse/snapshots/syntax/library/functions/resources/loadpicture/loadpicture_no_arguments.snap
---
source: projects/vb6parse/src/syntax/library/functions/resources/loadpicture.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: SetStatement
      children:
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: " "
        - kind: MemberAccessExpression
          children:
            - kind: Identifier
              text: Picture1
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: Picture
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: LoadPicture
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children: []
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
